Bug 152576 - Accessibility check from status bar is not updated in real time, not even on save
Summary: Accessibility check from status bar is not updated in real time, not even on ...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
7.5.0.0 beta1+
Hardware: All All
: medium normal
Assignee: Balázs Varga
URL:
Whiteboard: target:24.2.0 target:7.6.0.0.beta2
Keywords: accessibility
Depends on:
Blocks: a11y, Accessibility Accessibility-Check
  Show dependency treegraph
 
Reported: 2022-12-18 12:30 UTC by BogdanB
Modified: 2023-06-26 07:25 UTC (History)
5 users (show)

See Also:
Crash report or crash signature:


Attachments
demo document (51.38 KB, application/vnd.oasis.opendocument.text)
2022-12-18 12:34 UTC, BogdanB
Details
video about this bug (6.32 MB, video/mp4)
2022-12-18 12:35 UTC, BogdanB
Details
video testing the bug (8.25 MB, video/mp4)
2023-06-01 17:43 UTC, BogdanB
Details

Note You need to log in before you can comment on or make changes to this bug.
Description BogdanB 2022-12-18 12:30:51 UTC
Description:
Open the atteched document. Insert 3 times an Enter before the text and check the bottom simbol for accesiblity: shows no problem. If we go to Tools - Accesibility check we see some problems with a new line.

See the video

Steps to Reproduce:
In a clean document for accesibility, with no problem, insert 3 new lines. The bottom symobol is OK, instead of showing that there are problems in the file.

Actual Results:
No problem indicated by the bottom symbol.

Expected Results:
The problems should be shown by the symbol.


Reproducible: Always


User Profile Reset: Yes

Additional Info:
Version: 7.5.0.0.alpha1+ (X86_64) / LibreOffice Community
Build ID: ad085990b8073a122ac5222e5220f8f1d6826dcf
CPU threads: 16; OS: Linux 5.15; UI render: default; VCL: gtk3
Locale: ro-RO (ro_RO.UTF-8); UI: en-US
Calc: threaded
Comment 1 BogdanB 2022-12-18 12:34:16 UTC
Created attachment 184220 [details]
demo document
Comment 2 BogdanB 2022-12-18 12:35:00 UTC
Created attachment 184221 [details]
video about this bug
Comment 3 BogdanB 2022-12-18 19:43:09 UTC
Tomaž Vajngerl implemented this for 7.5, but I don't know his email to CC him.
Comment 4 Buovjaga 2022-12-19 12:00:47 UTC
Repro

Arch Linux 64-bit, X11
Version: 7.6.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 96a856f87f16cca2e039c973c18d57c8b9dca362
CPU threads: 8; OS: Linux 6.0; UI render: default; VCL: kf5 (cairo+xcb)
Locale: fi-FI (fi_FI.UTF-8); UI: en-US
Calc: threaded Jumbo
Built on 19 December 2022
Comment 5 Tomaz Vajngerl 2022-12-19 12:53:21 UTC
Yes, it needs tuning, that's why it's experimental. 

Also note that the check doesn't run immediately as it takes a lot of resources, so a paragraph is checked only, when you move to a different paragraph. Sometimes this isn't good - depending on the a11y check, which may depend on multiple paragraphs.
Comment 6 BogdanB 2022-12-19 13:59:34 UTC
(In reply to Tomaz Vajngerl from comment #5)
> Yes, it needs tuning, that's why it's experimental. 
> 
> Also note that the check doesn't run immediately as it takes a lot of
> resources, so a paragraph is checked only, when you move to a different
> paragraph. Sometimes this isn't good - depending on the a11y check, which
> may depend on multiple paragraphs.

If we will document this feature in Help, no matter that this will check each 30 seconds or when changing the paragraph, this feature will really be very useful. I thought about this and indeed would be very hungry for resources on big documents.

So, we will wait for this feature to "grow up" a little bit and see how this bug will close than.

Thanks for implementing this.
Comment 7 Gabor Kelemen (Collabora) 2023-06-01 12:25:28 UTC
This got better with

https://git.libreoffice.org/core/commit/168528094262f59aa5862dfb396ee4d95a989394

tdf#142978 Automatic a11y is required for this sidebar panel

Now when the sidebar is active with the a11y tab, the statusbar icon is also updated. 

Otherwise the assumption can be that the user does not want to check these issues yet, so the behavior is correct.

Also killing the sidebar with Ctrl-F5 clears this indicator, but turning it back enables it back.

I wonder if this is good enough yet or is there some other aspect that still could be improved? -> NeedsUXEval
Comment 8 BogdanB 2023-06-01 17:43:23 UTC
Created attachment 187645 [details]
video testing the bug

I can crash LibreOffice by doing so that LO it is showing I have problems with accesibility, but in fact is gone, so I get a crash. Need more than 1-2 minutes to get a crash, but is is very likely to get one. I succeded 3 times in 10 minutes. See the video
Comment 9 Heiko Tietze 2023-06-02 08:52:11 UTC
Besides tuning plans and actual work done, if the status bar is not always up-to-date we could show this with a third state, eg. grayed out icon (the issue also could have been solved meanwhile).
Comment 10 Gabor Kelemen (Collabora) 2023-06-22 09:34:11 UTC
(In reply to BogdanB from comment #8)
> Created attachment 187645 [details]
> video testing the bug
> 
> I can crash LibreOffice by doing so that LO it is showing I have problems
> with accesibility, but in fact is gone, so I get a crash. Need more than 1-2
> minutes to get a crash, but is is very likely to get one. I succeded 3 times
> in 10 minutes. See the video

I see this too. STR:
1. Open the example file attachment 184220 [details] - it has 4 empty paragraph below the table. The side bar complains about 3 of them by "Avoid newlines to create space".
2. Place the cursor to the beginning of the next non-empty paragraph "He heard..."
3. Press Backspace once. There are now 3 empty paragraphs below the table, but the sidebar has not been updated.
4/a. Click the last "Avoid newlines to create space" link -> crash.
4/b. If you press Backspace a second time the sidebar is updated and there is now only one working "Avoid new lines to create space" link, as expected.
Comment 11 Commit Notification 2023-06-23 08:31:54 UTC
Balazs Varga committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/1dc60ddafbbc1b1e8612cf1263f6987a1f3417b6

tdf#152576 - A11Y sidebar: improving update of issues on sidebar

It will be available in 24.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 12 Commit Notification 2023-06-26 07:25:52 UTC
Balazs Varga committed a patch related to this issue.
It has been pushed to "libreoffice-7-6":

https://git.libreoffice.org/core/commit/7a159bcaac6296d42811d7d08668f7bb8df88206

tdf#152576 - A11Y sidebar: improving update of issues on sidebar

It will be available in 7.6.0.0.beta2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.