tdf#152576 - A11Y sidebar: improving update of issues on sidebar

Put the empty paragraph nodes to the correct WeakNodeContainer.

Change-Id: I2db5608b0f7a625b6221d9290ea3d2502f4cadea
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/153469
Tested-by: Jenkins
Reviewed-by: Samuel Mehrbrodt <samuel.mehrbrodt@allotropia.de>